Added i18n, html-helpers, console command without progressbar

--- a/frontend/web/css/mycss.css
+++ b/frontend/web/css/mycss.css
@@ -1,7 +1,9 @@
 .mywidget {
+ padding: 5px 8px 5px 8px;
  font-family:Verdana,Tahoma,Sans-Serif;
- font-size:16pt;
+ font-size:11pt;
  font-weight:normal;
- color:darkbrown;
- background:gray;
+color: #305A81;
+	background: #F9F9F9;
+	border: 1px solid #B5BECC;
 }
